--- a/package.json
+++ b/package.json
@@ -1,1 +1,12 @@
-{ "name": "succinct-id", "version": "1.0.0" }
+{
+    "name": "succinct-id",
+    "version": "1.0.0",
+    "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "preview": "vite preview"
+    },
+    "dependencies": {},
+    "devDependencies": {}
+  }
+  
