--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "succinct-id",
     "version": "1.0.0",
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
     },
-    "dependencies": {},
-    "devDependencies": {}
-  }
-  
+    "devDependencies": {
+        "vite": "^6.3.5"
+    }
+}
