--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "succinct-id",
   "version": "1.0.0",
@@ -10,9 +9,12 @@
   "devDependencies": {
     "autoprefixer": "^10.0.0",
     "postcss": "^8.0.0",
-    "tailwindcss": "^3.0.0",
-    "vite": "^5.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.0.0",
+    "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "html2canvas": "^1.4.1"
   }
 }
