--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.0.0",
     "postcss": "^8.0.0",
     "react": "^18.2.0",
